From version 0.3.8 to 0.3.9
- man page for daemon admin support shell utility.

From version 0.3.7 to 0.3.8
- cleanup in module loading and path computations.
- fix for mingw32 cross builds, mingw32 now requires ucommon >= 2.0.2
- External registry objects for (provider) plugins that create call legs.
- routeLocal() for provider plugins to return remapped call leg registries.
- sipwitch server control options externalized into new "sipwitch" binary.

From version 0.3.6 to 0.3.7
- more registration management support functionality in forward module.
- start of authentication support for authorized destinations in sipwitch core.

From version 0.3.5 to 0.3.6
- expanded userid to accept remote user id's that are encoded uuid's.
- correctly refresh registration contact info if userid changes.

From version 0.3.4 to 0.3.5
- small fixes for memset in forward and messages
- pedantic code cleanup

From version 0.3.3 to 0.3.4
- new common uri code for libsipwitch to better support plugin development.
- refer rerouting support in plugins

From version 0.3.2 to 0.3.3
- reorganized api and dedicated to normal server build.
- runlevel slot 3 dedicated to derived per server specific plugins.
- new server "forward" plugin added. 

From version 0.3.1 to 0.3.2
- use of new "user context" objects, allows account lookup to be dynamic
  and externalized.
- minor fix for init script.
- use of GROUP to set effective server group id.
- uses memalloc instead of mempager, now requires ucommon 1.9.8...

From version 0.3.0 to 0.3.1
- expansion of rtpproxy runtime api for expanding assignment and counting
  (might be used to add additional rtp proxy sockets in a re-invite when 
  video is added, for example...)
- fix registration clearing & reuse when map becomes "offline"...
- correct integration with offline/online registry status & clearing

From version 0.2.7 to 0.3.0
- variant build of zeroconf plugin based on support.
- new rtpproxy engine code in api and server.