@@ -1,5 +1,6 @@
 From version 0.3.8 to 0.3.9
 - man page for daemon admin support shell utility.
+- sipwitch can return server info to calling pid.
 
 From version 0.3.7 to 0.3.8
 - cleanup in module loading and path computations.
